--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-name">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-tittle">Ma<span class="tittle-clr">r</span>y</h3>
             <ul>
@@ -23,7 +23,7 @@
             <div class="banner-content">
                 <h4 class="banner-greetings dark-2">Hi, I  am</h4>
                 <h1 class="banner-tittle">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">contract</button>
             </div>
@@ -31,7 +31,56 @@
         </div>
     </header>
     <main>
-
+        <section class="about secondary-bg">
+            <h3 class="section-tittle">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p> 
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-tittle">Name:</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-tittle">Email:</p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-tittle">Date of birth:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-tittle">From:</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+        <section class="skills">
+            <h3 class="section-tittle">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <skill>
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-tittle">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+                <skill>
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-tittle">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+                <skill>
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-tittle">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+                <skill>
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-tittle">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </skill>
+            </div>
+        </section>
     </main>
     <footer>
 
