--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
         </section>
         <section class="skills">
-            <h3 class="section-tittle">What I do</h3>
-            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <h3 class="section-tittle text-center">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skill-container">
                 <skill>
                     <img src="images/icons/js.png" alt="">
@@ -81,9 +81,80 @@
                 </skill>
             </div>
         </section>
+        <section class="resume">
+            <h3 class="section-tittle text-center">
+                A summary of My Resume
+            </h3>
+            <div class="resume-container">
+                <div class="resume-colume">
+                    <h3 class="resume-colume-tittle">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+                <div class="resume-colume">
+                    <h3 class="resume-colume-tittle">My experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-tittle">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-tittle">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-download-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="secondary-bg">
+        <div class="footer-colume">
+            <h3 class="section-tittle">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <a href=""><img src="images/icons/facebook.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="images/icons/insta.png" alt=""></a>
+        </div>
+        <div class="footer-colume">
+            <h3 class="section-tittle">Let's inbox me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your name">
+                <input type="email" name="" id="" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="massage"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
